# tonio-monkey

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
tests/_utils/: http_echo.py  http_server.py
tests/colored/: test_asgiref.py  test_fastapi.py  test_httpx.py  test_httpx2.py  test_psycopg.py  test_redis.py  test_starlette.py  test_websockets.py
tests/colored/django/: app.py  test_asgi_client.py  test_asgi_handler.py  test_shims.py
tonio_monkey/: __init__.py  colored.py
tonio_monkey/_impl/_colored/: __init__.py  _asgiref.py  _django.py  _fastapi.py  _httpx.py  _httpx2.py  _psycopg.py  _redis.py  _starlette.py  _websockets.py
